added a tab for SQL injection and XSS

--- a/index.html
+++ b/index.html
@@ -896,6 +896,26 @@
                                      width="25px" height="25px">
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="exploit-assistant-xss-nav-item" data-bs-toggle="tab"
+                               href="#exploit-assistant-xss" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="XSS assistant"
+                                     src="assets/icons/navbar/tab-3-exploit-assistant/xss.png"
+                                     width="25px" height="25px">
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="exploit-assistant-sql-injection-nav-item" data-bs-toggle="tab"
+                               href="#exploit-assistant-sql-injection" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="SQL injection assistant"
+                                     src="assets/icons/navbar/tab-3-exploit-assistant/sql-injection.png"
+                                     width="25px" height="25px">
+                            </a>
+                        </li>
                     </ul>
 
                     <div class="tab-content" id="exploit-assistant-tab-content">
@@ -932,6 +952,33 @@
                             </div>
                         </div>
                         <!-- tab 1 - csrf checker END -->
+
+                        <!-- tab 2 - XSS checker START -->
+                        <div class="tab-pane fade" id="exploit-assistant-xss"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4 class="text-dark"> XSS assistant </h4>
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                        <!-- tab 2 - XSS checker END -->
+
+                        <!-- tab 3 - sql-injection checker START -->
+                        <div class="tab-pane fade" id="exploit-assistant-sql-injection"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4 class="text-dark"> SQL-injection assistant </h4>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <!-- tab 3 - sql-injection checker END -->
 
 
                     </div>
